--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="primary_color">#3F51B5</color>
+    <color name="primary_color">#009688</color>
     <color name="primary_darker_color">#303F9F</color>
-    <color name="accent">#C5CAE9</color>
+    <color name="accent">#4DB6AC</color>
+    <color name="accent_ligth">#B2DFDB</color>
     
     <color name="actionbar_text">#FFFFFF</color>
     
     <color name="control_highlight_color">#FF0000</color>
     <color name="switch_thumbnormal_color">#00FF00</color>
+    
+    <color name="background_hololigth">#E0E0E0</color>
 
 </resources>
