--- a/res/layout/activity_addtestimonio.xml
+++ b/res/layout/activity_addtestimonio.xml
@@ -4,8 +4,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin" >
 
     <ScrollView
@@ -22,6 +20,7 @@
                 android:id="@+id/addtestimonio_et_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:padding="10dp"
                 android:ems="10"
                 android:hint="@string/addtestimonio_name"
                 android:inputType="textPersonName" >
@@ -33,41 +32,91 @@
                 android:id="@+id/addtestimonio_et_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:padding="10dp"
                 android:ems="10"
                 android:hint="@string/addtestimonio_email"
                 android:inputType="textEmailAddress" />
 
+            <TextView
+                android:id="@+id/addtestimonio_tv_category"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:text="@string/addtestimonio_category"
+                android:textColor="@color/accent"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+            
             <Spinner
                 android:id="@+id/addtestimonio_sp_category"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:padding="10dp"
                 android:prompt="@string/addtestimonio_category" />
 
             <EditText
                 android:id="@+id/addtestimonio_et_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:minLines="3"
+                android:maxLines="3"
                 android:ems="10"
                 android:hint="@string/addtestimonio_description"
+                android:background="@color/accent_ligth"
                 android:inputType="textMultiLine" />
 
+            <TextView
+                android:id="@+id/addtestimonio_tv_city"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:text="@string/addtestimonio_city"
+                android:textColor="@color/accent"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+            
             <Spinner
                 android:id="@+id/addtestimonio_sp_city"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:padding="10dp"
                 android:prompt="@string/addtestimonio_city" />
 
+            <TextView
+                android:id="@+id/addtestimonio_tv_age"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:text="@string/addtestimonio_age"
+                android:textColor="@color/accent"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+            
             <Spinner
                 android:id="@+id/addtestimonio_sp_age"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:padding="10dp"
                 android:prompt="@string/addtestimonio_age" />
 
+            <TextView
+                android:id="@+id/addtestimonio_tv_gendre"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:text="@string/addtestimonio_gender"
+                android:textColor="@color/accent"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+            
             <RadioGroup
                 android:id="@+id/addtestimonio_rg_gender"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal" >
+                android:background="@color/accent_ligth"
+                android:padding="10dp"
+                android:orientation="vertical" >
 
                 <RadioButton
                     android:id="@+id/addtestimonio_rb_gender_male"
@@ -83,12 +132,30 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/addtestimonio_gender_female" />
+                
+                <RadioButton
+                    android:id="@+id/addtestimonio_rb_gender_none"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/addtestimonio_gender_none" />
             </RadioGroup>
 
+            <TextView
+                android:id="@+id/addtestimonio_tv_scholarity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:text="@string/addtestimonio_scholarity"
+                android:textColor="@color/accent"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+            
             <Spinner
                 android:id="@+id/addtestimonio_sp_scholarity"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:padding="10dp"
                 android:prompt="@string/addtestimonio_scholarity" />
 
             <Button
