--- a/res/drawable/selector_btn_dark.xml
+++ b/res/drawable/selector_btn_dark.xml
@@ -3,6 +3,6 @@
 
     <item android:drawable="@color/accent" android:state_pressed="true"/>
     <item android:drawable="@color/accent" android:state_selected="true"/>
-    <item android:drawable="@color/hololigth"/>
+    <item android:drawable="@color/accent_ligth"/>
 
 </selector>
