--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,88 +1,53 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/accent_ligth"
+    android:divider="@drawable/divider_horizontal"
+    android:dividerPadding="12dip"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity" >
-
-    <TextView
-        android:id="@+id/main_tv_message"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_message"
-        android:background="@color/primary_color"
-        android:textColor="@android:color/white"
-        android:gravity="center" />
-    
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_message" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-
-        <TextView
-            android:id="@+id/age_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/age_text_view" >
-
-            <requestFocus />
-        </TextView>
-
-        <Space
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent" />
-
-        <EditText
-            android:id="@+id/age_edit_text"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:inputType="numberSigned" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-
-        <TextView
-            android:id="@+id/gender_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/gender_text_view" />
-
-        <RadioGroup
-            android:id="@+id/gender_radio_group"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
-
-            <RadioButton
-                android:id="@+id/gender_female_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/gender_female_button" />
-
-            <RadioButton
-                android:id="@+id/gender_male_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/gender_male_button" />
-        </RadioGroup>
-    </LinearLayout>
+    android:showDividers="middle" >
 
     <Button
-        android:id="@+id/save_button"
+        android:id="@+id/main_btn_option1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="saveUserProfile"
-        android:text="@string/save_button" />
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="@drawable/selector_btn_dark"
+        android:shadowColor="@color/white"
+        android:shadowDx="3"
+        android:shadowDy="3"
+        android:shadowRadius="10"
+        android:text="@string/main_menu_option1"
+        android:textColor="@color/primary_color"
+        android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/main_btn_option2"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="@drawable/selector_btn_dark"
+        android:shadowColor="@color/white"
+        android:shadowDx="3"
+        android:shadowDy="3"
+        android:shadowRadius="10"
+        android:text="@string/main_menu_option2"
+        android:textColor="@color/primary_color"
+        android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/main_btn_option3"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="@drawable/selector_btn_dark"
+        android:shadowColor="@color/white"
+        android:shadowDx="3"
+        android:shadowDy="3"
+        android:shadowRadius="10"
+        android:text="@string/main_menu_option3"
+        android:textColor="@color/primary_color"
+        android:textStyle="bold" />
 
 </LinearLayout>
