--- a/res/drawable/divider_horizontal.xml
+++ b/res/drawable/divider_horizontal.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <size android:height="1dp" />
-    <solid android:color="@color/primary_color" />
+    <solid android:color="@color/divider_color" />
 
 </shape>
