--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -10,38 +10,39 @@
     </string-array>
     
     <string-array name="testimonios_add_cities">
-        <item>Aguascalientes</item>
-        <item>Baja California</item>
-        <item>Baja California Sur</item>
-        <item>Campeche</item>
-        <item>Chiapas</item>
-        <item>Chihuahua</item>
-        <item>Coahuila</item>
-        <item>Colima</item>
-        <item>Distrito Federal</item>
-        <item>Durango</item>
-        <item>Estado de México</item>
-        <item>Guanajuato</item>
-        <item>Guerrero</item>
-        <item>Hidalgo</item>
-        <item>Jalisco</item>
-        <item>Michoacán</item>
-        <item>Morelos</item>
-        <item>Nayarit</item>
-        <item>Nuevo León</item>
-        <item>Oaxaca</item>
-        <item>Puebla</item>
-        <item>Querétaro</item>
-        <item>Quintana Roo</item>
-        <item>San Luis Potosí</item>
-        <item>Sinaloa</item>
-        <item>Sonora</item>
-        <item>Tabasco</item>
-        <item>Tamaulipas</item>
-        <item>Tlaxcala</item>
-        <item>Veracruz</item>
-        <item>Yucatán</item>
-        <item>Zacatecas</item>
+        <item value="0">Todo México</item>
+        <item value="1">Aguascalientes</item>
+        <item value="2">Baja California</item>
+        <item value="3">Baja California Sur</item>
+        <item value="4">Campeche</item>
+        <item value="5">Coahuila de Zaragoza</item>
+        <item value="6">Colima</item>
+        <item value="7">Chiapas</item>
+        <item value="8">Chihuahua</item>
+        <item value="9">Distrito Federal</item>
+        <item value="10">Durango</item>
+        <item value="11">Guanajuato</item>
+        <item value="12">Guerrero</item>
+        <item value="13">Hidalgo</item>
+        <item value="14">Jalisco</item>
+        <item value="15">México</item>
+        <item value="16">Michoacán de Ocampo</item>
+        <item value="17">Morelos</item>
+        <item value="18">Nayarit</item>
+        <item value="19">Nuevo León</item>
+        <item value="20">Oaxaca</item>
+        <item value="21">Puebla</item>
+        <item value="22">Querétaro</item>
+        <item value="23">Quintana Roo</item>
+        <item value="24">San Luis Potosí</item>
+        <item value="25">Sinaloa</item>
+        <item value="26">Sonora</item>
+        <item value="27">Tabasco</item>
+        <item value="28">Tamaulipas</item>
+        <item value="29">Tlaxcala</item>
+        <item value="30">Veracruz de Ignacio de la Llave</item>
+        <item value="31">Yucatán</item>
+        <item value="32">Zacatecas</item>
     </string-array>
     
     <string-array name="testimonios_add_ages">
