--- a/res/drawable/drawable_circle_default.xml
+++ b/res/drawable/drawable_circle_default.xml
@@ -4,9 +4,9 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/primary_color" />
+        android:color="@color/btn_ligth_green_color" />
 
-    <solid android:color="@color/accent" />
+    <solid android:color="@color/btn_ligth_green_color" />
 
     <size
         android:height="30dp"
