--- a/res/drawable/drawable_circle_pressed.xml
+++ b/res/drawable/drawable_circle_pressed.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval" >
+    android:shape="oval"
+    android:dither="true" >
 
     <stroke
         android:width="1dp"
-        android:color="@color/primary_color" />
+        android:color="@color/btn_dark_green_color" />
 
-    <solid android:color="@color/primary_color" />
+    <solid android:color="@color/btn_dark_green_color" />
 
     <size
         android:height="30dp"
