--- a/res/drawable/selector_btn_ligth.xml
+++ b/res/drawable/selector_btn_ligth.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@color/accent_ligth" android:state_pressed="true"/>
-    <item android:drawable="@color/accent_ligth" android:state_selected="true"/>
-    <item android:drawable="@color/hololigth"/>
+    <item android:drawable="@color/btn_ligth_green_color_alpha" android:state_pressed="true"/>
+    <item android:drawable="@color/btn_ligth_green_color_alpha" android:state_selected="true"/>
+    <item android:drawable="@color/btn_ligth_green_color"/>
 
 </selector>
