--- a/res/layout/actionbar.xml
+++ b/res/layout/actionbar.xml
@@ -1,14 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/toolbar"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/primary_color"
-        android:minHeight="?attr/actionBarSize" />
-
-</LinearLayout>
+    android:layout_height="wrap_content"
+    android:background="@color/primary_color"
+    android:minHeight="?attr/actionBarSize" />
