--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -2,52 +2,101 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/accent_ligth"
-    android:divider="@drawable/divider_horizontal"
-    android:dividerPadding="12dip"
+    android:divider="@drawable/divider_horizontal_white"
     android:orientation="vertical"
-    android:showDividers="middle" >
+    android:showDividers="middle"
+    android:weightSum="10" >
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="2"
+        android:background="@drawable/drawable_bgr_gradient" >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/toolbar"
+            android:drawablePadding="20dp"
+            android:drawableTop="@drawable/ic_launcher"
+            android:gravity="center"
+            android:padding="20dp"
+            android:shadowColor="@color/primary_color"
+            android:shadowDx="3"
+            android:shadowDy="3"
+            android:shadowRadius="5"
+            android:text="@string/lorem_ipsum_que_es_justicia"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="@color/white"
+            android:textSize="15sp" />
+
+        <include
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            layout="@layout/actionbar" />
+    </RelativeLayout>
 
     <Button
         android:id="@+id/main_btn_option1"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_weight="4"
         android:background="@drawable/selector_btn_dark"
-        android:shadowColor="@color/white"
+        android:drawableEnd="@android:drawable/ic_media_next"
+        android:drawableRight="@android:drawable/ic_media_next"
+        android:gravity="start|center_vertical"
+        android:paddingEnd="@dimen/activity_horizontal_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingStart="@dimen/activity_horizontal_margin"
+        android:shadowColor="@color/primary_color"
         android:shadowDx="3"
         android:shadowDy="3"
-        android:shadowRadius="10"
+        android:shadowRadius="5"
         android:text="@string/main_menu_option1"
-        android:textColor="@color/primary_color"
-        android:textStyle="bold" />
+        android:textColor="@color/white"
+        android:textSize="15sp" />
 
     <Button
         android:id="@+id/main_btn_option2"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:background="@drawable/selector_btn_dark"
-        android:shadowColor="@color/white"
+        android:layout_weight="4"
+        android:background="@drawable/selector_btn_ligth"
+        android:drawableEnd="@android:drawable/ic_media_next"
+        android:drawableRight="@android:drawable/ic_media_next"
+        android:gravity="start|center_vertical"
+        android:paddingEnd="@dimen/activity_horizontal_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:shadowColor="@color/primary_color"
         android:shadowDx="3"
         android:shadowDy="3"
-        android:shadowRadius="10"
+        android:shadowRadius="5"
         android:text="@string/main_menu_option2"
-        android:textColor="@color/primary_color"
-        android:textStyle="bold" />
+        android:textColor="@color/white"
+        android:textSize="15sp" />
 
     <Button
         android:id="@+id/main_btn_option3"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="@drawable/selector_btn_dark"
-        android:shadowColor="@color/white"
+        android:background="@drawable/selector_btn_ligth"
+        android:drawableEnd="@android:drawable/ic_media_next"
+        android:drawableRight="@android:drawable/ic_media_next"
+        android:gravity="start|center_vertical"
+        android:paddingEnd="@dimen/activity_horizontal_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:shadowColor="@color/primary_color"
         android:shadowDx="3"
         android:shadowDy="3"
-        android:shadowRadius="10"
+        android:shadowRadius="5"
         android:text="@string/main_menu_option3"
-        android:textColor="@color/primary_color"
-        android:textStyle="bold" />
+        android:textColor="@color/white"
+        android:textSize="15sp"
+        android:visibility="gone" />
 
 </LinearLayout>
