--- a/res/layout/activity_splash.xml
+++ b/res/layout/activity_splash.xml
@@ -3,13 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/accent" >
+    android:background="@color/white" >
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_launcher"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/ic_splash"
         android:layout_centerInParent="true"
+        android:padding="100dp"
         android:contentDescription="@string/app_name" />
 
 </RelativeLayout>
