--- a/res/layout/activity_testimonios_menu.xml
+++ b/res/layout/activity_testimonios_menu.xml
@@ -3,108 +3,164 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:weightSum="4" >
+    android:weightSum="10"
+    android:background="@color/btn_ligth_green_color" >
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="3"
+        android:background="@drawable/drawable_bgr_gradient"
+        android:orientation="vertical" >
+
+        <include
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            layout="@layout/actionbar" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="@string/testimonio_name"
+            android:padding="20dp"
+            android:src="@drawable/ic_launcher" />
+    </LinearLayout>
 
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="3" >
+        android:layout_weight="6"
+        android:background="@color/btn_ligth_green_color"
+        android:weightSum="2" >
 
         <TableRow
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1" >
 
-            <Button
+            <TextView
                 android:id="@+id/testimonios_menu_btn_justice1"
-                style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_margin="10dp"
                 android:layout_weight="1"
-                android:background="@drawable/selector_btn_circle"
+                android:background="@drawable/selector_btn_squared"
+                android:drawablePadding="20dp"
+                android:drawableTop="@drawable/ic_launcher"
+                android:gravity="center_horizontal"
+                android:minLines="3"
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:paddingTop="@dimen/activity_vertical_margin"
                 android:text="@string/justice_1"
-                android:textColor="@color/white" />
+                android:textColor="@color/white"
+                android:textSize="15sp" />
 
-            <Button
+            <TextView
                 android:id="@+id/testimonios_menu_btn_justice2"
-                style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_margin="10dp"
                 android:layout_weight="1"
-                android:background="@drawable/selector_btn_circle"
+                android:background="@drawable/selector_btn_squared"
+                android:drawablePadding="20dp"
+                android:drawableTop="@drawable/ic_launcher"
+                android:gravity="center_horizontal"
+                android:minLines="3"
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:paddingTop="@dimen/activity_vertical_margin"
                 android:text="@string/justice_2"
-                android:textColor="@color/white" />
-        </TableRow>
+                android:textColor="@color/white"
+                android:textSize="15sp" />
 
-        <TableRow
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" >
-
-            <Button
+            <TextView
                 android:id="@+id/testimonios_menu_btn_justice3"
-                style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_margin="10dp"
                 android:layout_weight="1"
-                android:background="@drawable/selector_btn_circle"
+                android:background="@drawable/selector_btn_squared"
+                android:drawablePadding="20dp"
+                android:drawableTop="@drawable/ic_launcher"
+                android:gravity="center_horizontal"
+                android:minLines="3"
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:paddingTop="@dimen/activity_vertical_margin"
                 android:text="@string/justice_3"
-                android:textColor="@color/white" />
-
-            <Button
-                android:id="@+id/testimonios_menu_btn_justice4"
-                style="?android:attr/buttonBarButtonStyle"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:background="@drawable/selector_btn_circle"
-                android:text="@string/justice_4"
-                android:textColor="@color/white" />
+                android:textColor="@color/white"
+                android:textSize="15sp" />
         </TableRow>
 
         <TableRow
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_weight="1" >
 
-            <Button
-                android:id="@+id/testimonios_menu_btn_justice5"
-                style="?android:attr/buttonBarButtonStyle"
+            <TextView
+                android:id="@+id/testimonios_menu_btn_justice4"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_margin="10dp"
                 android:layout_weight="1"
-                android:background="@drawable/selector_btn_circle"
-                android:text="@string/justice_5"
-                android:textColor="@color/white" />
+                android:background="@drawable/selector_btn_squared"
+                android:drawablePadding="20dp"
+                android:drawableTop="@drawable/ic_launcher"
+                android:gravity="center_horizontal"
+                android:minLines="3"
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:paddingTop="@dimen/activity_vertical_margin"
+                android:text="@string/justice_4"
+                android:textColor="@color/white"
+                android:textSize="15sp" />
 
-            <Button
-                android:id="@+id/testimonios_menu_btn_justice6"
-                style="?android:attr/buttonBarButtonStyle"
+            <TextView
+                android:id="@+id/testimonios_menu_btn_justice5"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_margin="10dp"
                 android:layout_weight="1"
-                android:background="@drawable/selector_btn_circle"
-                android:text="@string/justice_6"
-                android:textColor="@color/white" />
+                android:background="@drawable/selector_btn_squared"
+                android:drawablePadding="20dp"
+                android:drawableTop="@drawable/ic_launcher"
+                android:gravity="center_horizontal"
+                android:minLines="3"
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:paddingTop="@dimen/activity_vertical_margin"
+                android:text="@string/justice_5"
+                android:textColor="@color/white"
+                android:textSize="15sp" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:paddingTop="@dimen/activity_vertical_margin" />
         </TableRow>
     </TableLayout>
 
-    <ImageView
-        android:id="@+id/testimonios_iv_map"
+    <TextView
+        android:id="@+id/testimonios_btn_map"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:layout_marginLeft="30dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:contentDescription="@string/testimonio_name"
-        android:src="@drawable/ic_launcher" />
+        android:gravity="center"
+        android:background="@drawable/selector_btn_squared_border"
+        android:text="@string/testimonios_btn_map"
+        android:textColor="@color/white"
+        android:textSize="15sp" />
 
 </LinearLayout>
