--- a/res/menu/settings.xml
+++ b/res/menu/settings.xml
@@ -2,10 +2,10 @@
     xmlns:cide="http://schemas.android.com/apk/res-auto" >
 
     <item
-        android:id="@+id/action_main_settings"
-        android:icon="@android:drawable/ic_menu_preferences"
+        android:id="@+id/action_settings_close"
+        android:icon="@android:drawable/ic_menu_close_clear_cancel"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/action_close"
         cide:showAsAction="always"/>
 
 </menu>
