--- a/res/layout/activity_testimonios.xml
+++ b/res/layout/activity_testimonios.xml
@@ -23,7 +23,7 @@
                     android:id="@+id/testimonios_iv_logo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/drawable_bgr_gradient"
+                    android:background="@drawable/drawable_bgr_gradient_dark"
                     android:contentDescription="@string/testimonio_name"
                     android:paddingBottom="@dimen/activity_vertical_margin"
                     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -93,6 +93,16 @@
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:background="@color/btn_dark_green_color"
                         android:textColor="@color/white" />
+                    
+                    <ProgressBar
+                        android:id="@+id/testimonios_pb_loading"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="@dimen/activity_vertical_margin"
+                        android:paddingBottom="@dimen/activity_vertical_margin"
+                        android:paddingLeft="@dimen/activity_horizontal_margin"
+                        android:paddingRight="@dimen/activity_horizontal_margin"
+                        android:background="@color/btn_dark_green_color" />
                 </LinearLayout>
             </LinearLayout>
 
