--- a/res/menu/close.xml
+++ b/res/menu/close.xml
@@ -2,8 +2,8 @@
     xmlns:cide="http://schemas.android.com/apk/res-auto" >
 
     <item
-        android:id="@+id/action_settings_close"
-        android:icon="@android:drawable/ic_menu_close_clear_cancel"
+        android:id="@+id/action_close"
+        android:icon="@drawable/ic_action_close_green"
         android:orderInCategory="100"
         android:title="@string/action_close"
         cide:showAsAction="always"/>
