--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/action_main_settings"
-        android:icon="@android:drawable/ic_menu_preferences"
+        android:icon="@drawable/ic_action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
         cide:showAsAction="always"/>
