--- a/res/values-v14/styles.xml
+++ b/res/values-v14/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--
         Base application theme for API 14+. This theme completely replaces
@@ -19,6 +19,21 @@
          	which is used to tint widgets
         -->
         <item name="colorAccent">@color/accent</item>
+        
+        <item name="colorControlNormal">@color/white</item>
+        <item name="colorControlActivated">@color/accent</item>
+        <item name="colorControlHighlight">@color/accent</item>
+
+        <item name="android:editTextStyle">@style/EditTextStyle</item>
+        <item name="android:spinnerStyle">@style/SpinnerStyle</item>
+    </style>
+    
+    <style name="EditTextStyle" parent="Widget.AppCompat.EditText" >
+        <item name="android:background">@color/white</item>
+    </style>
+    
+    <style name="SpinnerStyle" parent="Widget.AppCompat.Spinner" >
+        <item name="android:background">@color/white</item>
     </style>
 
 </resources>
