--- a/res/drawable/selector_btn_squared.xml
+++ b/res/drawable/selector_btn_squared.xml
@@ -3,6 +3,6 @@
 
     <item android:drawable="@color/btn_dark_green_color" android:state_pressed="true"/>
     <item android:drawable="@color/btn_dark_green_color" android:state_selected="true"/>
-    <item android:drawable="@color/btn_ligth_green_color"/>
+    <item android:drawable="@color/white"/>
 
 </selector>
